Fix supsub inside something with text-align: center
Apparently text-align is inherited, so it was causing the smaller of the
two (the sup and sub) to be centered, when it should be left-aligned.
See GitHub comment on this commit for illustration.

--- a/src/css/math.less
+++ b/src/css/math.less
@@ -129,6 +129,7 @@
   //   its contents, rather than always being as wide as the subscript.
   //   See also .fraction
   .mq-supsub {
+    text-align: left;
     font-size: 90%;
     vertical-align: -.5em;
     &.mq-limit {
